--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <groupId>com.github.woonsan</groupId>
   <artifactId>spring-mvc-freemarker3-demo</artifactId>
   <version>0.1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>Spring MVC web application with Freemarker 3 templating demo project</name>
   <description>Spring MVC web application with Freemarker 3 templating demo project</description>
