Adding FreemarkerServlet to compare with spring mvc

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,10 +24,29 @@
   <description>Spring MVC web application with Freemarker 3 templating demo</description>
 
   <servlet>
+    <servlet-name>freemarker</servlet-name>
+    <servlet-class>org.apache.freemarker.servlet.FreemarkerServlet</servlet-class>
+    <init-param>
+      <param-name>TemplatePath</param-name>
+      <param-value>/</param-value>
+    </init-param>
+    <init-param>
+      <param-name>ContentType</param-name>
+      <param-value>text/html; charset=UTF-8</param-value>
+    </init-param>
+    <load-on-startup>200</load-on-startup>
+  </servlet>
+
+  <servlet>
     <servlet-name>spring-examples</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
+
+  <servlet-mapping>
+    <servlet-name>freemarker</servlet-name>
+    <url-pattern>*.ftl</url-pattern>
+  </servlet-mapping>
 
   <servlet-mapping>
     <servlet-name>spring-examples</servlet-name>
