--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,7 @@
   </servlet>
 
   <servlet>
-    <servlet-name>spring-examples</servlet-name>
+    <servlet-name>simple-examples</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
@@ -49,8 +49,8 @@
   </servlet-mapping>
 
   <servlet-mapping>
-    <servlet-name>spring-examples</servlet-name>
-    <url-pattern>/examples/*</url-pattern>
+    <servlet-name>simple-examples</servlet-name>
+    <url-pattern>/simple-examples/*</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
