Adding mvc xml configuration example.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,7 +44,13 @@
   </servlet>
 
   <servlet>
-    <servlet-name>mvc-examples</servlet-name>
+    <servlet-name>mvc-examples-1</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <load-on-startup>200</load-on-startup>
+  </servlet>
+
+  <servlet>
+    <servlet-name>mvc-examples-2</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>200</load-on-startup>
   </servlet>
@@ -60,8 +66,13 @@
   </servlet-mapping>
 
   <servlet-mapping>
-    <servlet-name>mvc-examples</servlet-name>
-    <url-pattern>/mvc-examples/*</url-pattern>
+    <servlet-name>mvc-examples-1</servlet-name>
+    <url-pattern>/mvc-examples-1/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>mvc-examples-2</servlet-name>
+    <url-pattern>/mvc-examples-2/*</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
