--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,9 @@
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
+
+    <maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
 
     <spring.version>4.3.9.RELEASE</spring.version>
     <freemarker.version>3.0.0-SNAPSHOT</freemarker.version>
